# cs50-psets

./: .gitignore  CMakeLists.txt  README.md  cmd.txt
pset1/: greedy  greedy.c  hello  hello.c  mario  mario.c  water  water.c
pset2/: caesar  caesar.c  initials  initials.c  vigenere  vigenere.c
pset3/fifteen/: fifteen  fifteen.c  log.txt  questions.txt
pset3/find/: find  generate  generate.c  helpers.c
pset4/: questions.txt
pset4/bmp/: resize  resize.c  whodunit  whodunit.c
pset4/jpg/: recover  recover.c
pset5/: dictionary.c  dictionary.h  emailWithErrors.txt  myDict.txt  pset5-questions.txt  questions.txt  speller
pset6/: CMakeLists.txt  server  server.c
pset7/: config.json  pset7.sql
pset7/public/: buy.php  deposit.php  history.php  index.php  quote.php  register.php  sell.php
pset7/public/css/: styles.css
pset7/views/: buy_form.php  deposit_form.php  header.php  portfolio.php  quote_display.php  quote_form.php  sell_form.php  transactions.php
pset8/: config.json  pset8.sql
pset8/public/: search.php
pset8/public/css/: styles.css
pset8/public/js/: scripts.js
